--- a/labhtml.html
+++ b/labhtml.html
@@ -87,44 +87,16 @@
       <div class="genre">
         <h1>Genre</h1>
         <ul>
-          <ul>
-            <li>R&B</li>
-          </ul>
-          <ul>
-            <li>Country</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Electronic</li>
-            <li>Pop</li>
-            <li>Rock</li>
-          </ul>
-          <ul>
-            <li>Rap</li>
-          </ul>
+          <li><p>R&B</p></li>
+          <li><p>Country</p> </li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Pop<br></br>Rock</p></li>
+          <li><p>Electronic<br></br>Pop<br></br>Rock</p></li>
+          <li><p>Rap</p></li>
         </ul>
       </div>
       <div class="album_cover">
@@ -142,15 +114,16 @@
           <li><img src="https://cdn-s3.allmusic.com/release-covers/500/0004/631/0004631095.jpg" alt="Through the Late Night Album Cover"></li>
         </ul>
       </div>
+      <h2 style="clear: both;"></h2>
+      <footer>
+        <address>
+          Written by <a href="mailto:edwardeclarkiii@gmail.com">Teddy Clark, Michael Kokkatt, Shane Riggs</a>.<br>
+          Visit us at:<br>
+          <a href="https://github.com/Konami-Fitness/lab2">GitHub</a> <br>
+          110 8th St<br>
+          Troy, NY 12180 USA
+        </address>
+      </footer>
     </main>
-    <footer>
-      <address>
-      Written by <a href="mailto:edwardeclarkiii@gmail.com">Teddy Clark, Michael Kokkatt, Shane Riggs</a>.<br>
-      Visit us at:<br>
-      <a href="https://github.com/teddy-clark/konami_webdev/blob/master/lab2">GitHub</a> <br>
-      110 8th St<br>
-      Troy, NY 12180 USA
-      </address>
-    </footer>
   </body>
 </html>
